# ableton-copilot

./: LICENSE  MCP_SERVER_IMPROVEMENT_ROADMAP.md  README.md  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: __init__.py  connection.py  prompts.py  resources.py  server.py  state.py  telemetry.py  telemetry_decorator.py
