[project]
name = "ableton-copilot"
version = "0.1.0"
description = "An AI music-production copilot for Ableton Live, built on the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Francisco Fischer"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "supabase>=2.0.0",
]

[project.scripts]
ableton-copilot = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/F-Fischer/ableton-copilot"
"Bug Tracker" = "https://github.com/F-Fischer/ableton-copilot/issues"